# nugie-codeparrot

./: .gitignore  README.md  kimi_linear_gdn2.py  pyproject.toml  requirements.txt
configs/: base.yaml  colab_t4.yaml  h200.yaml  kaggle_2xt4.yaml
gated_deltanet_2/: __init__.py  core.py  layer.py
multi_latent_attention/: __init__.py  attention.py
notebooks/: colab_train_t4.ipynb  kaggle_train_2xt4.ipynb
pipeline/: __init__.py  checkpointing.py  config.py  evaluate.py  muon.py  optimizer.py  prepare_data.py  tokenizer.py  train.py
tests/: conftest.py  test_attention.py  test_layer.py  test_model.py  test_moe.py  test_optimizer.py  test_rule.py
